# gstreamer-rockchip-extra

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
common/: autogen.sh.in  check-exports  download-translations  gst-glib-gen.mak  gstdoc-scangobj  orc.mak  po.mak  release.mak  update-common  update_gst_modules_assets.py  win32.mak
common/hooks/: install-hooks  post-receive.hook  pre-receive.hook  update.hook
common/m4/: gst-error.m4  gst-glib2.m4
debian/: .gitignore  README.source  changelog  control
gst/: Makefile.am
gst-libs/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/rkisp1/: .gitignore  Makefile.am  librk_aiq.so.aarch64  librk_aiq.so.arm  rk_aiq.h  rk_aiq_types.h  rkisp1-config.h
gst/kms/: gstkmsallocator.c  gstkmsallocator.h  gstkmsbufferpool.h  gstkmssink.c  gstkmssink.h  gstkmsutils.c  gstkmsutils.h
gst/rkv4l2/: Makefile.am  common.c  common.h  gstv4l2.c  gstv4l2bufferpool.c  gstv4l2bufferpool.h  gstv4l2colorbalance.h  gstv4l2object.c  gstv4l2object.h  gstv4l2src.c  gstv4l2transform.c  gstv4l2vidorient.c  ispsrc.c  ispsrc.h  rgaconvert.c  rgaconvert.h  rkcamsrc.c  rkcamsrc.h  rkcommon.c  rkcommon.h  rkispsrc.c  rkrgaconvert.c  rkv4l2.c  v4l2_calls.c  v4l2_calls.h
gst/rkv4l2/ext/: mediactl.c  v4l2subdev.c  videodev2.h
gst/rkv4l2/rgaconvert/: rgaconvert.c  rgaconvert.h
gst/rkv4l2/rk/: rkcommon.c  rkcommon.h  rkispsrc.c  rkispsrc.h  rkrgaconvert.c  rkrgaconvert.h
gst/rkv4l2/rkcamsrc/: media-controller.c  media-controller.h  rkcamsrc.c  rkcamsrc.h
gst/rkv4l2/rkcamsrc/rkisp1/: README.md  common.h  params.c  params.h  rkisp1-lib.h  sensor.c  sensor.h  stats.h  thread.c  thread.h  v4l2.c  v4l2.h
gst/rkv4l2/v4l2/: gstv4l2.c  gstv4l2allocator.c  gstv4l2allocator.h  gstv4l2bufferpool.c  gstv4l2bufferpool.h  gstv4l2object.c  gstv4l2object.h  gstv4l2vidorient.h  v4l2-utils.h  v4l2_calls.c  v4l2_calls.h
gst/rkximage/: rkx_kmsutils.c  ximagesink.c  ximagesink.h
gst/v4l2/: Makefile.am  gstv4l2.c  v4l2_calls.c  v4l2_calls.h
po/: Makevars
